# Company_sync_boilerplate

./: .gitignore  README.md  cheatsheet.md  environment.yml  pyproject.toml
company_sync/: __main__.py  config.py  database.py  logging_config.py  utils.py
company_sync/handlers/: crm_handler.py  so_updater.py
company_sync/processors/: csv_processor.py
company_sync/repositories/: crm_repository.py
company_sync/services/: so_service.py
company_sync/strategies/: aetna_strategy.py  base_strategy.py  oscar_strategy.py
